refactor(jeebiz-boot):重构基础实体和 mapper 接口
- 删除了多个不再使用的类和接口
- 重命名了部分类和包
-简化了实体类和 mapper接口的结构
- 移除了冗余代码和不必要的注释